--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ license = "Apache-2.0"
 readme = "README.md"
 edition = "2021"
 
+[lib]
+name = "jsonless"
+crate-type = ["staticlib"]
+
 [dependencies]
 log = "0.4"
 serde_json = "1.0.114"
